# Arcalis

./: .gitignore  README.md
DeathStarBench/accel-socialnetNetwork/: app_to_rpc.csv  docker-compose.yml  dpdk_to_rpc.csv  rpc_to_app.csv  rpc_to_dpdk.csv
DeathStarBench/accel-socialnetNetwork/config/: service-config.json
DeathStarBench/accel-socialnetNetwork/gen-cpp/: ComposePostService.h  HomeTimelineService.cpp  HomeTimelineService.h  MediaService.cpp  PostStorageService.cpp  PostStorageService.h  SocialGraphService.cpp  TextService.cpp  UniqueIdService.cpp  UniqueIdService.h  UrlShortenService.cpp  UrlShortenService.h  UserMentionService.cpp  UserMentionService.h  UserService.cpp  UserService.h  UserTimelineService.h  social_network_types.cpp
DeathStarBench/accel-socialnetNetwork/src/: ThriftClient.h  logger.h  utils_redis.h
DeathStarBench/accel-socialnetNetwork/src/PostStorageService/client/: Makefile  post_storage_client_test  post_storage_client_test.cpp  test_runner.sh
DeathStarBench/accel-socialnetNetwork/src/PostStorageService/client/test_results/: test_summary_20250531_064959.txt  test_summary_20250531_065019.txt  test_summary_20250531_065103.txt  test_summary_20250531_065815.txt  test_summary_20250531_121054.txt
DeathStarBench/accel-socialnetNetwork/src/PostStorageService/server/: CMakeLists.txt  PostStorageBusinessLogic.cpp  PostStorageBusinessLogic.h  PostStorageHandler.cpp  PostStorageHandler.h  build.sh  main_server.cpp
DeathStarBench/accel-socialnetNetwork/src/UniqueIdService/client/: Makefile  test_runner.sh  uid_client_test  uid_client_test.cpp
DeathStarBench/accel-socialnetNetwork/src/UniqueIdService/client/test_results/: baseline_1thread_20250530_005524.csv  baseline_1thread_20250531_064012.csv  baseline_2threads_20250530_005524.csv  baseline_2threads_20250531_064012.csv  baseline_4threads_20250530_005524.csv  baseline_4threads_20250531_064012.csv  baseline_8threads_20250530_005524.csv  baseline_8threads_20250531_064012.csv  baseline_high_load_20250530_005524.csv  baseline_high_load_20250531_064012.csv  latency_1thread_20250530_005525.csv  latency_1thread_20250531_064013.csv  latency_2threads_20250530_005525.csv  latency_2threads_20250531_064013.csv  latency_4threads_20250530_005525.csv  latency_4threads_20250531_064013.csv  stress_16threads_20250530_005524.csv  stress_16threads_20250531_064012.csv  stress_burst_20250530_005524.csv  stress_burst_20250531_064012.csv  stress_sustained_20250530_005525.csv  stress_sustained_20250531_064012.csv  test_summary_20250530_005526.txt  test_summary_20250531_064013.txt
DeathStarBench/accel-socialnetNetwork/src/UniqueIdService/server/: CMakeLists.txt  PacketLogger.h  PacketReplaySocket.h  PacketReplaySocket_vector.h  UniqueIdBusinessLogic.cpp  UniqueIdBusinessLogic.h  UniqueIdHandler.cpp  UniqueIdHandler.h  main_server.cpp  main_server_working.cpp
DeathStarBench/accel-socialnetNetwork/src/UniqueIdService/working_server/: CMakeLists.txt  UniqueIdBusinessLogic.cpp  UniqueIdBusinessLogic.h  UniqueIdHandler.cpp  UniqueIdHandler.h  main_server.cpp
DeathStarBench/accel-socialnetNetwork/src/UserTimelineService/client/: 100  Makefile  test_runner.sh  user_timeline_client_test  user_timeline_client_test.cpp
DeathStarBench/accel-socialnetNetwork/src/UserTimelineService/server/: CMakeLists.txt  UserTimelineBusinessLogic.cpp  UserTimelineBusinessLogic.h  UserTimelineHandler.cpp  UserTimelineHandler.h  main_server.cpp
DeathStarBench/accel-socialnetNetwork/traces/: app_to_rpc.csv  rpc_to_app.csv  rpc_to_dpdk.csv
DeathStarBench/socialNetwork/gen-cpp/: ComposePostService.cpp  MediaService.h  SocialGraphService.h  TextService.h  UniqueIdService.cpp  UniqueIdService.h  UserTimelineService.cpp  social_network_types.h
Thrift/: build.sh  configure.ac  install_thrift_deps.sh
Thrift/lib/cpp/: CMakeLists.txt  Makefile.am  newbackup.Makefile.am
Thrift/lib/cpp/src/thrift/: TDispatchProcessor.h  TProcessor.h
Thrift/lib/cpp/src/thrift/async/: TConcurrentClientSyncInfo.h
Thrift/lib/cpp/src/thrift/concurrency/: Exception.h
Thrift/lib/cpp/src/thrift/server/: TConnectedClient.cpp  TThreadedServer.cpp  (+7 more)
Thrift/tutorial/cpp/: CMakeLists.txt  CppServer.cpp  CppServer_old.cpp  CppServer_orig.cpp  Server  config.ini  newbackup.Makefile.am
Thrift/tutorial/cpp/deathstarbench/: CMakeLists.txt  build.sh  composepost.thrift
Thrift/tutorial/cpp/deathstarbench/src/: client.cpp  server.cpp
Thrift/tutorial/cpp/memcached_thrift/: DPDKHandler.cpp  MemcachedDPDKServer.cpp  MemcachedServer.cpp  PacketReplayer.h  ThriftMemcachedDPDKServer.cpp  ThriftMemcachedDPDKServer_app-rpc_isolated.cpp  ThriftMemcachedDPDKServer_app-rpc_isolated_buffer-alloc-in-logic.cpp  ThriftMemcachedDPDKServer_mem.cpp  ThriftMemcachedDPDKServer_mode.cpp  ThriftMemcachedDPDKServer_orig.cpp  ThriftMemcachedDPDKServer_working.cpp  log  memcached_dpdk_server  memcached_server  memcached_service.cpp  thrift_memcached_dpdk_server
Thrift/tutorial/cpp/memcached_thrift/memcached/: items.c  memcached.c  memcached.h  proto_bin.c  proto_text.c
Thrift/tutorial/cpp/memcached_thrift_int8_t/: DPDKHandler_orig.cpp  DPDKHandler_orig.h  MemcachedDPDKServer.cpp  MemcachedServer.cpp  PacketLogger.h  ThriftMemcachedDPDKServer.cpp  log  memcached_benchmark.thrift  memcached_client  memcached_dpdk_server  memcached_server  shared_buffer.h  shared_memory_app.cpp  thrift_memcached_dpdk_server
Thrift/tutorial/cpp/memcached_thrift_string/: DPDKHandler.cpp  DPDKHandler.h  MemcachedClient.cpp  MemcachedDPDKServer.cpp  MemcachedServer.cpp  PacketLogger.h  ThriftMemcachedDPDKServer.cpp  ThriftMemcachedDPDKServer_app-rpc_sharedmem.cpp  ThriftMemcachedDPDKServer_dpdk-rpc_sharedmem.cpp  ThriftMemcachedDPDKServer_msg_queue.cpp  memcached_benchmark.thrift  memcached_dpdk_server  memcached_server  shared_buffer.cpp  shared_memory_app.h  thrift_memcached_dpdk_server
Thrift/tutorial/cpp/minimal_social/: CMakeLists.txt  ClientPool.h  ComposePostHandler.h  ComposePostServer.cpp  TestClient.cpp  UniqueIdHandler.h  UniqueIdServer.cpp  UserHandler.h  UserServer.cpp  build.sh  minimal_social.thrift
(+40 files in other folders)
